# prime_one

./: .gitignore  pyproject.toml
prime_one/: cli.py  lang_call.py  poems.py
